--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,15 @@ actix-web = "4.5.1"
 tokio = { version = "1.36.0", features = ["full"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
-sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "macros"] }
+diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
+diesel_migrations = "2.1.0"
 dotenv = "0.15.0"
 env_logger = "0.11.2"
 chrono = { version = "0.4.35", features = ["serde"] }
+solana-sdk = "1.17.0"
+solana-client = "1.17.0"
+solana-program = "1.17.0"
+r2d2 = "0.8.10"
+thiserror = "1.0"
+uuid = { version = "1.7.0", features = ["v4", "serde"] }
+bs58 = "0.5.0"
