chore: update dependencies in Cargo.toml
- Updated Diesel dependency to version 2.1 and added new features: "uuid" and "serde_json".
- Added web3 dependency at version 0.19.0 for Ethereum integration.
- Ensured compatibility with the latest library versions for improved functionality.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ actix-web = "4.5.1"
 tokio = { version = "1.36.0", features = ["full"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
-diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
+diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }
 diesel_migrations = "2.1.0"
 dotenv = "0.15.0"
 env_logger = "0.11.2"
@@ -20,3 +20,4 @@ r2d2 = "0.8.10"
 thiserror = "1.0"
 uuid = { version = "1.7.0", features = ["v4", "serde"] }
 bs58 = "0.5.0"
+web3 = "0.19.0"
