--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "uuid", "s
 diesel_migrations = "2.1.0"
 dotenv = "0.15.0"
 env_logger = "0.11.2"
-chrono = { version = "0.4.35", features = ["serde"] }
+chrono = { version = "0.4", features = ["serde"] }
 solana-sdk = "1.17.0"
 solana-client = "1.17.0"
 solana-program = "1.17.0"
@@ -21,3 +21,18 @@ thiserror = "1.0"
 uuid = { version = "1.7.0", features = ["v4", "serde"] }
 bs58 = "0.5.0"
 web3 = "0.19.0"
+jsonwebtoken = "8.1.1"
+base64 = "0.21.7"
+ark-groth16 = "0.4.0"
+ark-bn254 = "0.4.0"
+ark-ff = "0.4.0"
+ark-ec = "0.4.0"
+ark-std = "0.4.0"
+ark-relations = "0.4.0"
+ark-serialize = { version = "0.4.0", features = ["derive"] }
+ark-snark = "0.4.0"
+rand = "0.8.5"
+sha3 = "0.10.8"
+bincode = "1.3.3"
+hex = "0.4.3"
+num-bigint = "0.4.4"
