chore: update .gitignore to include additional files and directories
- Expanded .gitignore to prevent tracking of various temporary, debug, and environment files.
- Added entries for Rust-specific files, IDE/editor files, OS-specific files, and project-specific directories.
- Ensured that unnecessary files such as logs, backups, and database files are excluded from version control.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,40 @@
+# Rust specific
 /target
 **/*.rs.bk
+Cargo.lock
+rust-toolchain.toml
+
+# Environment files
 .env
 .env.*
 !.env.example
+
+# IDE and editor files
 .idea/
 .vscode/
+*.swp
+*.swo
+
+# Debug files
 *.pdb
-Cargo.lock
-rust-toolchain.toml
+debug/
+
+# OS specific
 .DS_Store
+Thumbs.db
+
+# Project specific
+/keys/
+*.log
+*.bak
+tmp/
+
+# Database
+*.db
+*.db-*
+*.sqlite
+*.sqlite3
+
+# Temporary files
+*.tmp
+*~
